--- a/scode/src/style/App.css
+++ b/scode/src/style/App.css
@@ -1,3 +1,16 @@
+.p-7 {
+  padding: 1.75rem;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 /*
 ! tailwindcss v3.4.4 | MIT License | https://tailwindcss.com
 */
