--- a/scode/src/style/App.css
+++ b/scode/src/style/App.css
@@ -159,6 +159,14 @@
   margin-top: 2rem;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .block {
   display: block;
 }
