--- a/scode/src/style/App.css
+++ b/scode/src/style/App.css
@@ -190,6 +190,14 @@
   margin-top: 2rem;
 }
 
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .block {
   display: block;
 }
